<resources>
    <string name="app_name">CrossCollab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_details_to_get_started">Enter your details to get started</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="department">Department</string>
    <string name="select_department">Select Department</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password_required_title">Password must be at least 8 characters with uppercase,lowercase and number.</string>
    <string name="i_agree_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="create_password">Create password</string>
    <string name="john">John</string>
    <string name="doe">Doe</string>
    <string name="john_doe_company_com">johndoe@company.com</string>
    <string name="_995_00_00_00">+995 (000) 000-000</string>
    <string name="code_expires_in">Code expires in</string>
    <string name="_00_50">00:50</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_credentials_to_access_your_account">Enter your credentials to access your account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_password_question_mark">Forgor password?</string>
    <string name="enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password">Enter your email and we\'ll send you a link to reset your password.</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="new_notification">NEW</string>
    <string name="my_events">My Events</string>
    <string name="list">List</string>
    <string name="calendar">Calendar</string>
    <string name="next_upcoming_event">Next Upcoming Event</string>
    <string name="map_preview_of_event_location">Map Preview of Event Location</string>
</resources>