<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".presentation.screen.auth.register.RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/tvSubtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/enter_your_details_to_get_started"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFirstName"
                style="@style/TextViewLabel"
                android:layout_marginTop="40dp"
                android:text="@string/first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFirstName"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:hint="@string/john"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFirstName"
                app:layout_constraintWidth_percent="0.47" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewLabel"
                android:layout_marginTop="0dp"
                android:text="@string/last_name"
                app:layout_constraintStart_toStartOf="@id/etLastName"
                app:layout_constraintTop_toTopOf="@id/tvFirstName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLastName"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:hint="@string/doe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFirstName"
                app:layout_constraintWidth_percent="0.47" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                style="@style/TextViewLabel"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFirstName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/EditTextStyle"
                android:hint="@string/john_doe_company_com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoneNumber"
                style="@style/TextViewLabel"
                android:text="@string/phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhoneNumber"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:hint="@string/_995_00_00_00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber"
                app:layout_constraintWidth_percent="0.7" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSentOTP"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/otp_btn_light_gray"
                android:text="@string/send_otp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/etPhoneNumber"
                app:layout_constraintTop_toTopOf="@id/etPhoneNumber" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icShield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_otp"
                app:layout_constraintBottom_toBottomOf="@id/tvEnterOtp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvEnterOtp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEnterOtp"
                style="@style/TextViewLabel"
                android:layout_marginStart="10dp"
                android:text="@string/enter_otp_code"
                app:layout_constraintStart_toEndOf="@id/icShield"
                app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />

            <LinearLayout
                android:id="@+id/llOtpContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEnterOtp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etOtp1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etOtp2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etOtp3"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etOtp4"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etOtp5"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etOtp6"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCodeExpires"
                style="@style/TextViewLabel"
                android:layout_marginTop="5dp"
                android:text="@string/code_expires_in"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llOtpContainer" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvExpireTime"
                style="@style/TextViewLabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/_00_50"
                android:textColor="@color/gray"
                app:layout_constraintStart_toEndOf="@id/tvCodeExpires"
                app:layout_constraintTop_toBottomOf="@id/llOtpContainer" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBtnResendCode"
                style="@style/TextViewLabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/resend_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvCodeExpires" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDepartment"
                style="@style/TextViewLabel"
                android:text="@string/department"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCodeExpires" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiDepartment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/select_department"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDepartment">

                <AutoCompleteTextView
                    android:id="@+id/departmentDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                style="@style/TextViewLabel"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiDepartment" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                style="@style/EditTextStyle"
                android:hint="@string/create_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPassword" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icRequiredPassword"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@drawable/ic_question_mark"
                app:layout_constraintBottom_toBottomOf="@id/tvPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPasswordSubtitle"
                style="@style/TextViewLabel"
                android:layout_marginTop="5dp"
                android:text="@string/password_required_title"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirmPassword"
                style="@style/TextViewLabel"
                android:text="@string/confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPasswordSubtitle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmPassword"
                style="@style/EditTextStyle"
                android:hint="@string/confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icRequiredConfirmPass"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@drawable/ic_question_mark"
                app:layout_constraintBottom_toBottomOf="@id/tvConfirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvConfirmPassword" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkboxPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/i_agree_policy"
                android:textColor="@color/black"
                app:buttonTint="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_btn"
                android:backgroundTint="@color/black"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkboxPolicy" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHaveAccount"
                style="@style/TextViewLabel"
                android:text="@string/already_have_an_account"
                app:layout_constraintEnd_toStartOf="@id/tvBtnSignIn"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCreateAccount" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBtnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tvHaveAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvHaveAccount"
                app:layout_constraintTop_toTopOf="@id/tvHaveAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>